Creado mediante Colaboratory

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPn2WMLdmnEvckKy7o65t9a",
+      "authorship_tag": "ABX9TyOLLjhpO2nIMeoF2WIfLLYi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -572,40 +572,73 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Factorial"
+        "### CONTARGRUPOS2"
       ],
       "metadata": {
-        "id": "XRrQhlA5QvJP"
+        "id": "TxxUP6DTNDe-"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "\"\"\"\n",
-        "Nombre:factorial\n",
-        "Entrada:num\n",
-        "Salida: la multiplicación desde 1 hasta num\n",
-        "Restricciones: solo enteros\n",
-        "\"\"\"\n",
-        "def factorial(fin):\n",
-        "    resultado = 1\n",
-        "\n",
-        "    if isinstance(fin, int):\n",
-        "       if(fin >= 0):\n",
-        "                    #si sin = 5\n",
-        "           #range(fin,0,-1)\n",
-        "           for numero in range (fin, 0 -1):\n",
-        "               resultado *= numero\n",
-        "        \n",
-        "       else: \n",
-        "            return \"Error: n debe ser >==0\"\n",
-        "    \n",
+        "def contarGrupos2(numero):\n",
+        "    resultado = 0\n",
+        "    if(isinstance(numero,int)):\n",
+        "        if(numero > 0):\n",
+        "            while(numero > 9):\n",
+        "                digito = numero % 100\n",
+        "                numero = numero // 100\n",
+        "                resultado = resultado + 1\n",
+        "            return resultado\n",
+        "        elif(numero == 0):\n",
+        "            return 1\n",
+        "        else:\n",
+        "            return \"Error: Debe de ser mayor o igual a CERO\"\n",
         "    else:\n",
-        "         return \"Error: n debe ser entero\"  \n",
-        "    return resultado\n"
+        "        return \"Error: NO es tipo entero\""
       ],
       "metadata": {
-        "id": "fgLjh0Iz2B23"
+        "id": "SPrvmmrUBshz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "T8jK1gjQMuZl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Contará todos los digitos impares existentes dentro de numero"
+      ],
+      "metadata": {
+        "id": "mvRwksTfB3PT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def contarDigitosImpares(numero):\n",
+        "    resultado = 0\n",
+        "    if(isinstance(numero,int)):\n",
+        "        if(numero > 0):\n",
+        "            while numero > 0:\n",
+        "                digito = numero % 10\n",
+        "                numero = numero // 10\n",
+        "                if(ndigito % 2) > 0: #si es impar\n",
+        "                    resultado = resultado + 1\n",
+        "            return resultado\n",
+        "        else:\n",
+        "            return \"Error: Debe de ser mayor o igual a CERO\"\n",
+        "    else:\n",
+        "       return\"Error: NO es del tipo entero\""
+      ],
+      "metadata": {
+        "id": "Ywj1xgTgBzuq"
       },
       "execution_count": null,
       "outputs": []
@@ -641,10 +674,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###SUMATRORIA"
+        "### SEMANA 5"
       ],
       "metadata": {
-        "id": "QNSkXPvgRiT_"
+        "id": "dBqJLTpPKDK-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### SUMATORIA"
+      ],
+      "metadata": {
+        "id": "qAAuxBS5On9Q"
       }
     },
     {
@@ -657,19 +699,42 @@
         "return res"
       ],
       "metadata": {
-        "id": "Ekj6KOS-Rk2-"
+        "id": "8Jnp7-vfMJan"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "### SEMANA 4"
+        "\"\"\"\n",
+        "Nombre:factorial\n",
+        "Entrada:num\n",
+        "Salida: la multiplicación desde 1 hasta num\n",
+        "Restricciones: solo enteros\n",
+        "\"\"\"\n",
+        "def factorial(fin):\n",
+        "    resultado = 1\n",
+        "\n",
+        "    if isinstance(fin, int):\n",
+        "       if(fin >= 0):\n",
+        "                    #si sin = 5\n",
+        "           #range(fin,0,-1)\n",
+        "           for numero in range (fin, 0 -1):\n",
+        "               resultado *= numero\n",
+        "        \n",
+        "       else: \n",
+        "            return \"Error: n debe ser >==0\"\n",
+        "    \n",
+        "    else:\n",
+        "         return \"Error: n debe ser entero\"  \n",
+        "    return resultado\n"
       ],
       "metadata": {
-        "id": "dBqJLTpPKDK-"
-      }
+        "id": "3hWbyrYaO54F"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
