Creado mediante Colaboratory

--- a/CUADERNO3.ipynb
+++ b/CUADERNO3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNs8RzV4HW1jT/8TJiYiSJ2",
+      "authorship_tag": "ABX9TyNnJVP49cFGbHyPX0LKZElV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -907,6 +907,88 @@
       ],
       "metadata": {
         "id": "qf_8u64ISRGu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### SEMANA 7"
+      ],
+      "metadata": {
+        "id": "QhRSVyuvTJ6P"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### SEPARAR PARES"
+      ],
+      "metadata": {
+        "id": "czYSnxgfTyzf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def separarParesImpares_V1(lista):\n",
+        "     if(isinstance(lista,list)):\n",
+        "          listaPares = []\n",
+        "          listaImpares = []\n",
+        "\n",
+        "          for valor in lista:\n",
+        "               if(isinstance(valor,str)):\n",
+        "                    print(\"Error: Elemento es un string\")\n",
+        "                    continue\n",
+        "               elif ((valor % 2) == 0):\n",
+        "                    listaPares += [valor]\n",
+        "               elif((valor % 2) != 0):\n",
+        "                    listaImpares += [valor]\n",
+        "          return listaPares, listaImpares\n",
+        "     else:\n",
+        "          return \"Errro: Debe de ingresar una lista\""
+      ],
+      "metadata": {
+        "id": "BfPIKsrqTxNO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "SEPARAR PARES CON WHILE"
+      ],
+      "metadata": {
+        "id": "Z8H9tilwT5gP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def separarParesImpares(numero):\n",
+        "     listaPares = []\n",
+        "     listaImpares = []\n",
+        "\n",
+        "     if(isinstance(numero,int)):\n",
+        "          if(numero > 0):\n",
+        "               while(numero > 0):\n",
+        "                    digito = numero % 10\n",
+        "                    numero = numero // 10\n",
+        "\n",
+        "                    if((digito % 2) == 0):\n",
+        "                         listaPares += [digito]\n",
+        "                    elif((digito % 2) != 0):\n",
+        "                         listaImpares += [digito]\n",
+        "          else:\n",
+        "               listaPares = 0\n",
+        "          return listaPares, listaImpares\n",
+        "     else:\n",
+        "          return \"Error: EL número debe de ser entero\""
+      ],
+      "metadata": {
+        "id": "bmhSASs6T1K3"
       },
       "execution_count": null,
       "outputs": []
