Creado mediante Colaboratory

--- a/CUADERNO3.ipynb
+++ b/CUADERNO3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNnJVP49cFGbHyPX0LKZElV",
+      "authorship_tag": "ABX9TyOGInHw67ehSbHaTEGRWlXW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -989,6 +989,144 @@
       ],
       "metadata": {
         "id": "bmhSASs6T1K3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ELIMINARELEMENTO\n",
+        "Nombre: eliminarElemento\n",
+        "Entradas: Dos parámetros, lista y un número\n",
+        "Salidas: Una lista pero elimino la primera aparicion de \"Número\"\n",
+        "Restricciones: La lista no debe de ser vacia"
+      ],
+      "metadata": {
+        "id": "SBWGf0kSVjjG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def eliminarElemento(lista, numero):\n",
+        "    if(isinstance(lista,list) and isinstance(numero,int)):\n",
+        "        if(lista != []):\n",
+        "            return elimionarElemento_For(lista,numero, [])\n",
+        "        else:\n",
+        "            return \"Error: Debe de ingresar una matriz no vacia\"\n",
+        "\n",
+        "    else:\n",
+        "        return \"Error: Debe de ingresar una lista\"\n",
+        "\n",
+        "def elimionarElemento_For(lista,numero, resultado):\n",
+        "    encontro = False\n",
+        "\n",
+        "    for elemento in lista:\n",
+        "        if encontro:\n",
+        "            resultado += [elemento]\n",
+        "\n",
+        "        elif not encontro and elemento == numero:\n",
+        "            encontro = True\n",
+        "\n",
+        "        else:\n",
+        "            resultado += [elemento]\n",
+        "\n",
+        "    return resultado"
+      ],
+      "metadata": {
+        "id": "ixupfZrSVoa-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ELIMINAR ELEMENTOS\n",
+        "Nombre: eliminarElementos\n",
+        "Entradas: Dos parámetros, lista y un número\n",
+        "Salidas: Una lista pero elimino la primera aparicion de \"Número\"\n",
+        "Restricciones: La lista no debe de ser vacia"
+      ],
+      "metadata": {
+        "id": "VhgF4_32V0ko"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def eliminarElementos(lista, numero):\n",
+        "    if(isinstance(lista,list) and isinstance(numero,int)):\n",
+        "        if(lista != []):\n",
+        "            return elimionarElemento_For(lista,numero, [])\n",
+        "        else:\n",
+        "            return \"Error: Debe de ingresar una matriz no vacia\"\n",
+        "\n",
+        "    else:\n",
+        "        return \"Error: Debe de ingresar una lista\"\n",
+        "\n",
+        "def elimionarElementos_For(lista,numero, resultado):\n",
+        "   \n",
+        "\n",
+        "    for elemento in lista:\n",
+        "        if elemento != numero:\n",
+        "            continue\n",
+        "      \n",
+        "        else:\n",
+        "            resultado += [elemento]\n",
+        "\n",
+        "    return resultado"
+      ],
+      "metadata": {
+        "id": "Td4S-2XIWCg2"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### LISTA ASCENDNETE"
+      ],
+      "metadata": {
+        "id": "VNT5rjs5XIUW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def asc(lista):# Este codigo funciona\n",
+        "    if(lista == []):\n",
+        "        return []\n",
+        "    else:\n",
+        "        return ordenarAsc(lista,lista,lista[0],0,0,[])\n",
+        "    \n",
+        "def ordenarAsc(lista,lista2,menor,contador,recursiones,nueva_lista):\n",
+        "    if(lista[1:]==[]):\n",
+        "        nueva_lista += [lista[0]]\n",
+        "        return print(nueva_lista)\n",
+        "    if(lista2 == []):\n",
+        "       nueva_lista += [menor]\n",
+        "       editar1 = lista[:contador]\n",
+        "       editar2 = lista[contador+1:]\n",
+        "       lista = editar1+editar2\n",
+        "       lista2 = lista\n",
+        "       recursiones = 0\n",
+        "       contador = 0\n",
+        "       menor = lista[0]\n",
+        "       return ordenarAsc(lista,lista2,menor,contador,recursiones,nueva_lista)\n",
+        "    if(lista2[0] < menor):\n",
+        "        menor = lista2[0]\n",
+        "        contador = recursiones\n",
+        "        return ordenarAsc(lista,lista2[1:],menor,contador,recursiones+1,nueva_lista)\n",
+        "    elif lista2[0] == menor:\n",
+        "        return ordenarAsc(lista,lista2[1:], menor,contador,recursiones+1,nueva_lista)\n",
+        "    else:\n",
+        "        return ordenarAsc(lista,lista2[1:],menor,contador,recursiones+1,nueva_lista)"
+      ],
+      "metadata": {
+        "id": "GCjzvNkEXGc2"
       },
       "execution_count": null,
       "outputs": []
