Creado mediante Colaboratory

--- a/CUADERNO3.ipynb
+++ b/CUADERNO3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOGInHw67ehSbHaTEGRWlXW",
+      "authorship_tag": "ABX9TyOpfh1+EP+NBo0rqGtjSupY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1130,6 +1130,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#SEMANA 8"
+      ],
+      "metadata": {
+        "id": "Sk07PMXJXPB-"
+      }
     }
   ]
 }
